{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 99,
  "lineage": "62df8632-9bfc-dcdb-5459-75362c1b4a1d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-060fce851a361cfaa",
            "arn": "arn:aws:ec2:us-east-1:137989785867:elastic-ip/eipalloc-060fce851a361cfaa",
            "association_id": "eipassoc-0c91dc3592a49222f",
            "domain": "vpc",
            "id": "eipalloc-060fce851a361cfaa",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0505153f364459afa",
            "private_dns": "ip-10-0-1-161.ec2.internal",
            "private_ip": "10.0.1.161",
            "public_dns": "ec2-34-200-100-188.compute-1.amazonaws.com",
            "public_ip": "34.200.100.188",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-nat-gateway"
            },
            "tags_all": {
              "Name": "eip-nat-gateway"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09a3c39d51caed430",
            "arn": "arn:aws:ec2:us-east-1:137989785867:elastic-ip/eipalloc-09a3c39d51caed430",
            "association_id": "eipassoc-0e69ff1703ff94d5b",
            "domain": "vpc",
            "id": "eipalloc-09a3c39d51caed430",
            "instance": "i-07c279b4ed0faa7bb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02e427698cf9ee022",
            "private_dns": "ip-10-0-1-70.ec2.internal",
            "private_ip": "10.0.1.70",
            "public_dns": "ec2-34-200-152-235.compute-1.amazonaws.com",
            "public_ip": "34.200.152.235",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-ec2-web"
            },
            "tags_all": {
              "Name": "eip-ec2-web"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.ec2_web",
            "aws_key_pair.key_pair",
            "aws_security_group.sg_web",
            "aws_subnet.subred_web",
            "aws_vpc.vpc_principal",
            "tls_private_key.clave_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00e801948462f718a",
            "arn": "arn:aws:ec2:us-east-1:137989785867:instance/i-0794ebd4907621d22",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0794ebd4907621d22",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "clave-proyecto-academy",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-097aad5c695b501a1",
            "private_dns": "ip-10-0-2-206.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fdae8f667fb280c1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07ae3d39312f147b8",
            "tags": {
              "Name": "ec2-app"
            },
            "tags_all": {
              "Name": "ec2-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06c643ed7bcb4bb6e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.sg_app",
            "aws_security_group.sg_web",
            "aws_subnet.subred_app",
            "aws_vpc.vpc_principal",
            "tls_private_key.clave_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_datos",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00e801948462f718a",
            "arn": "arn:aws:ec2:us-east-1:137989785867:instance/i-0ec688e1ad3d76500",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ec688e1ad3d76500",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "clave-proyecto-academy",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08d8ece5aebb12c5a",
            "private_dns": "ip-10-0-3-150.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0dc8f2a3d9ac2cde0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b38475c503612f4",
            "tags": {
              "Name": "ec2-datos"
            },
            "tags_all": {
              "Name": "ec2-datos"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0431429a45cfe5225"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.sg_app",
            "aws_security_group.sg_datos",
            "aws_security_group.sg_web",
            "aws_subnet.subred_datos",
            "aws_vpc.vpc_principal",
            "tls_private_key.clave_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00e801948462f718a",
            "arn": "arn:aws:ec2:us-east-1:137989785867:instance/i-07c279b4ed0faa7bb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07c279b4ed0faa7bb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "clave-proyecto-academy",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02e427698cf9ee022",
            "private_dns": "ip-10-0-1-70.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.70",
            "public_dns": "ec2-34-200-152-235.compute-1.amazonaws.com",
            "public_ip": "34.200.152.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ea42909585c0d5cb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03f2180b7f45d9138",
            "tags": {
              "Name": "ec2-web"
            },
            "tags_all": {
              "Name": "ec2-web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b9c8ff5b7b66e137"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.sg_web",
            "aws_subnet.subred_web",
            "aws_vpc.vpc_principal",
            "tls_private_key.clave_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137989785867:internet-gateway/igw-065638c04831985b7",
            "id": "igw-065638c04831985b7",
            "owner_id": "137989785867",
            "tags": {
              "Name": "igw-curso"
            },
            "tags_all": {
              "Name": "igw-curso"
            },
            "vpc_id": "vpc-0b37573e559122c9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-060fce851a361cfaa",
            "association_id": "eipassoc-0c91dc3592a49222f",
            "connectivity_type": "public",
            "id": "nat-03c62b08d60b97eee",
            "network_interface_id": "eni-0505153f364459afa",
            "private_ip": "10.0.1.161",
            "public_ip": "34.200.100.188",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03f2180b7f45d9138",
            "tags": {
              "Name": "nat-gateway-curso"
            },
            "tags_all": {
              "Name": "nat-gateway-curso"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_internet_gateway.igw",
            "aws_subnet.subred_web",
            "aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137989785867:route-table/rtb-01178f36c71943461",
            "id": "rtb-01178f36c71943461",
            "owner_id": "137989785867",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03c62b08d60b97eee",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-privada"
            },
            "tags_all": {
              "Name": "rt-privada"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b37573e559122c9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.subred_web",
            "aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137989785867:route-table/rtb-0bf14fd1ab2addf23",
            "id": "rtb-0bf14fd1ab2addf23",
            "owner_id": "137989785867",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-065638c04831985b7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-publica"
            },
            "tags_all": {
              "Name": "rt-publica"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b37573e559122c9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e60c9bb1e4805a69",
            "route_table_id": "rtb-01178f36c71943461",
            "subnet_id": "subnet-07ae3d39312f147b8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.rt_privada",
            "aws_subnet.subred_app",
            "aws_subnet.subred_web",
            "aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "datos_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3ba636142f5d967",
            "route_table_id": "rtb-01178f36c71943461",
            "subnet_id": "subnet-01b38475c503612f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.rt_privada",
            "aws_subnet.subred_datos",
            "aws_subnet.subred_web",
            "aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0deac68ad982b82fc",
            "route_table_id": "rtb-0bf14fd1ab2addf23",
            "subnet_id": "subnet-03f2180b7f45d9138"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_publica",
            "aws_subnet.subred_web",
            "aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137989785867:security-group/sg-06c643ed7bcb4bb6e",
            "description": "Permite trafico desde la capa web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06c643ed7bcb4bb6e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-0b9c8ff5b7b66e137"
                ],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b9c8ff5b7b66e137"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b9c8ff5b7b66e137"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b9c8ff5b7b66e137"
                ],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "sg_capa_app",
            "name_prefix": "",
            "owner_id": "137989785867",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b37573e559122c9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_web",
            "aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_datos",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137989785867:security-group/sg-0431429a45cfe5225",
            "description": "Permite trafico de base de datos desde la capa app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0431429a45cfe5225",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b9c8ff5b7b66e137"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-06c643ed7bcb4bb6e"
                ],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b9c8ff5b7b66e137"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_capa_datos",
            "name_prefix": "",
            "owner_id": "137989785867",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b37573e559122c9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_app",
            "aws_security_group.sg_web",
            "aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137989785867:security-group/sg-0b9c8ff5b7b66e137",
            "description": "Permite trafico web hacia las instancias ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b9c8ff5b7b66e137",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_capa_web",
            "name_prefix": "",
            "owner_id": "137989785867",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b37573e559122c9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137989785867:subnet/subnet-07ae3d39312f147b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ae3d39312f147b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137989785867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subred-privada-app"
            },
            "tags_all": {
              "Name": "subred-privada-app"
            },
            "vpc_id": "vpc-0b37573e559122c9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred_datos",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137989785867:subnet/subnet-01b38475c503612f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b38475c503612f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137989785867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subred-privada-datos"
            },
            "tags_all": {
              "Name": "subred-privada-datos"
            },
            "vpc_id": "vpc-0b37573e559122c9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137989785867:subnet/subnet-03f2180b7f45d9138",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f2180b7f45d9138",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "137989785867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subred-publica-web"
            },
            "tags_all": {
              "Name": "subred-publica-web"
            },
            "vpc_id": "vpc-0b37573e559122c9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_principal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_principal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137989785867:vpc/vpc-0b37573e559122c9d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08874acfbc885e994",
            "default_route_table_id": "rtb-036715581d7d36c86",
            "default_security_group_id": "sg-018d612062534a204",
            "dhcp_options_id": "dopt-0305e0c3bf6b7e2e5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b37573e559122c9d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-036715581d7d36c86",
            "owner_id": "137989785867",
            "tags": {
              "Name": "vpc-curso"
            },
            "tags_all": {
              "Name": "vpc-curso"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}